add o3as_info method
